--- a/index.html
+++ b/index.html
@@ -1,18 +1,145 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Document</title>
+	<title>株式会社VOYAGE GROUP｜人を軸にした事業開発会社</title>
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<meta name="author" content="">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/vnd.microsoft.ico">
 	<link rel="apple-touch-icon-precomposed" href="/favicon-152.png">
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
+<body>
+	<header class="top-header">
+		<ul class="lang-nav">
+			<li>日本語</li>
+			<li>English</li>
+		</ul>
+		<div class="header-img">VOYAGE GROUP</div>
+		<nav class="global-nav">
+			<ul>
+				<li>企業情報</li>
+				<li>ニュース</li>
+				<li>事業紹介</li>
+				<li>テクノロジー</li>
+				<li>カルチャー</li>
+				<li>株主・投資家の皆様へ</li>
+				<li>採用情報</li>
+			</ul>
+		</nav>
+		<div class="slider">
+			<ul>
+				<li><img src="image/img_slider_01.jpg" alt=""></li>
+				<li><img src="image/img_slider_02.jpg" alt=""></li>
+				<li><img src="image/img_slider_03.jpg" alt=""></li>
+			</ul>
+		</div>
+	</header>
+
+	<main>
+		<section class="news">
+			<ul class="all">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<ul class="ir">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<ul class="release">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<ul class="publicity">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+			<ul class="seminer">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</section>
+
+		<section class="about-company">
+			<div>
+				<img src="" alt="">
+				<h2></h2>
+				<p></p>
+			</div>
+			<div>
+				<img src="" alt="">
+				<h2></h2>
+				<p></p>
+			</div>
+		</section>
+
+		<section class="service">
+			<h2></h2>
+			<p></p>
+			<h3></h3>
+			<p></p>
+			<div class="btn"></div>
+		</section>
+	</main>
+
+	<footer>
+		<nav class="to-top"></nav>
+
+		<aside class="links">
+			<ul>
+				<li>
+					<img src="" alt="">
+					<p class="name"></p>
+					<p class="txt"></p>
+				</li>
+				<li>
+					<img src="" alt="">
+					<p class="name"></p>
+					<p class="txt"></p>
+				</li>
+				<li>
+					<img src="" alt="">
+					<p class="name"></p>
+					<p class="txt"></p>
+				</li>
+				<li>
+					<img src="" alt="">
+					<p class="name"></p>
+					<p class="txt"></p>
+				</li>
+			</ul>
+		</aside>
+
+		<nav class="fooer-nav">
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+		</nav>
+
+		<div class="copyright"></div>
+	</footer>
 </body>
+
 </html>
