--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<header class="top-header">
 		<ul class="lang-nav">
 			<li>日本語</li>
-			<li>English</li>
+			<li><a href="#">English</a></li>
 		</ul>
 		<div class="header-img">VOYAGE GROUP</div>
 		<nav class="global-nav">
@@ -34,9 +34,9 @@
 		</nav>
 		<div class="slider">
 			<ul>
-				<li><img src="image/img_slider_01.jpg" alt=""></li>
-				<li><img src="image/img_slider_02.jpg" alt=""></li>
-				<li><img src="image/img_slider_03.jpg" alt=""></li>
+				<li><img src="image/img_slider_01.jpg" alt="" class="open"></li>
+				<li><img src="image/img_slider_02.jpg" alt="" class=""></li>
+				<li><img src="image/img_slider_03.jpg" alt="" class=""></li>
 			</ul>
 		</div>
 	</header>
