--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 			<li>日本語</li>
 			<li><a href="#">English</a></li>
 		</ul>
-		<div class="header-img">VOYAGE GROUP</div>
+		<h1 class="header-img">
+			<img class="lg-img" src="image/img_logo_pc.png" alt="VOYAGE GROUP" width="172" height="38">
+			<img class="sm-img" src="image/img_logo.png" alt="VOYAGE GROUP" width="111" height="25">
+		</h1>
 		<nav class="global-nav">
 			<ul>
 				<li>企業情報</li>
@@ -43,12 +46,20 @@
 
 	<main>
 		<section class="news">
+			<ul class="news-nav">
+			<li><a href="">ALL</a></li>
+			<li><a href="">IRニュース</a></li>
+			<li><a href="">プレスリリース</a></li>
+			<li><a href="">パブリシティ</a></li>
+			<li><a href="">勉強会/登壇情報</a></li>
+			</ul>
+
 			<ul class="all">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href=""><span class="date">2017年08月04日</span><span class="news-type">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
+				<li><a href=""><span class="date">2017年08月02日</span><span class="news-type">プレスリリース</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
+				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type">IRニュース</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
+				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type">IRニュース</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+				<li><a href=""><span class="date">2017年07月31日</span><span class="news-type">プレスリリース</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 			</ul>
 			<ul class="ir">
 				<li></li>
