--- a/index.html
+++ b/index.html
@@ -26,13 +26,84 @@
 		</h1>
 		<nav class="global-nav">
 			<ul>
-				<li>企業情報</li>
-				<li>ニュース</li>
-				<li>事業紹介</li>
-				<li>テクノロジー</li>
-				<li>カルチャー</li>
-				<li>株主・投資家の皆様へ</li>
-				<li>採用情報</li>
+				<li>
+					<div class="ttl">企業情報</div>
+					<div class="discription">
+						<ul>
+							<li>
+								<div class="ttl-more">企業情報
+									<p>COMPANY</p>
+									<img src="image/bnr_company.jpg" alt="企業情報">
+									<div>会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li>
+					<div class="ttl">企業情報</div>
+					<!-- <div class="discription">
+						<ul>
+							<li>
+							<div class="ttl-more">企業情報
+								<p>COMPANY</p>
+								<img src="image/bnr_company.jpg" alt="企業情報">
+								<p>会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</p>
+							</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+							<li></li>
+						</ul>
+					</div> -->
+				</li>
+
+			<li>
+				<div class="ttl">事業紹介</div>
+				<!-- <div class="discription">
+
+				</div> -->
+			</li>
+			<li>
+				<div class="ttl">テクノロジー</div>
+				<!-- <div class="discription">
+
+				</div> -->
+			</li>
+			<li>
+				<div class="ttl">カルチャー</div>
+				<!-- <div class="discription">
+
+				</div> -->
+			</li>
+			<li>
+				<div class="ttl">株主・投資家の皆様へ</div>
+				<!-- <div class="discription">
+
+				</div> -->
+			</li>
+			<li>
+				<div class="ttl">採用情報</div>
+				<!-- <div class="discription">
+
+				</div> -->
+			</li>
 			</ul>
 		</nav>
 		<div class="slider">
@@ -46,110 +117,146 @@
 
 	<main>
 		<section class="news">
-			<ul class="news-nav">
-			<li><a href="">ALL</a></li>
-			<li><a href="">IRニュース</a></li>
-			<li><a href="">プレスリリース</a></li>
-			<li><a href="">パブリシティ</a></li>
-			<li><a href="">勉強会/登壇情報</a></li>
-			</ul>
-
-			<ul class="all">
-				<li><a href=""><span class="date">2017年08月04日</span><span class="news-type">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
-				<li><a href=""><span class="date">2017年08月02日</span><span class="news-type">プレスリリース</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
-				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type">IRニュース</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
-				<li><a href=""><span class="date">2017年08月01日</span><span class="news-type">IRニュース</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
-				<li><a href=""><span class="date">2017年07月31日</span><span class="news-type">プレスリリース</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
-			</ul>
-			<ul class="ir">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-			<ul class="release">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-			<ul class="publicity">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
-			<ul class="seminer">
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-				<li></li>
-			</ul>
+			<div class="news-nav">
+				<ul>
+					<li><a href="#news1">ALL</a></li>
+					<li><a href="#news2">IRニュース</a></li>
+					<li><a href="#news3">プレスリリース</a></li>
+					<li><a href="#news4">パブリシティ</a></li>
+					<li><a href="#news5">勉強会/登壇情報</a></li>
+				</ul>
+			</div>
+			<div class="news-list">
+				<ul id="news1" class="all">
+					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-release">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
+					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-release">プレスリリース</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-ir">IRニュース</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-ir">IRニュース</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-release">プレスリリース</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
+				</ul>
+				<ul id="news2" class="ir">
+					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-info">お知らせ</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
+					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-info">お知らせ</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info">お知らせ</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info2">お知らせ</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-info">お知らせ</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
+				</ul>
+				<ul id="news3" class="release">
+					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-release">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
+					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-release">プレスリリース</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-release">プレスリリース</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-release">プレスリリース</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-release">プレスリリース</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
+				</ul>
+				<ul id="news4" class="publicity">
+					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-publicity">パブリシティ</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
+					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-publicity">パブリシティ</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-publicity">パブリシティ</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-publicity">パブリシティ</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-publicity">パブリシティ</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
+				</ul>
+				<ul id="news5" class="seminer">
+					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
+					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
+					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
+					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
+				</ul>
+			</div>
 		</section>
 
 		<section class="about-company">
 			<div>
-				<img src="" alt="">
-				<h2></h2>
-				<p></p>
+				<a href=""><img src="image/img_ir-top_01.jpg" alt="経営理念"></a>
+				<a href=""><h2>経営理念</h2></a>
+				<p>創業時からの想い「SOUL」と、価値観である「CREED」をご紹介します</p>
 			</div>
 			<div>
-				<img src="" alt="">
-				<h2></h2>
-				<p></p>
+				<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+				<a href=""><h2>企業情報</h2></a>
+				<p>会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご紹介します</p>
 			</div>
 		</section>
 
-		<section class="service">
-			<h2></h2>
-			<p></p>
-			<h3></h3>
-			<p></p>
-			<div class="btn"></div>
+		<section class="service-wrap">
+			<div class="service">
+				<h2>SERVICE</h2>
+				<h3>事業紹介</h3>
+				<p class="intro">アドプラットフォーム事業・ポイントメディア事業<br>そしてインキュベーション事業を主軸に展開</p>
+				<p>インターネット領域においての<br>アドプラットフォーム事業・ポイントメディア事業の他にも、<br>HR関連事業やFintech関連事業などの新規事業への挑戦も続けています。</p>
+				<div class="btn"><a href="">詳細を見る</a></div>
+			</div>
+		</section>
+
+		<section class="about-company">
+			<div>
+				<a href=""><img src="image/bnr_ir.jpg" alt="IR情報トップ"></a>
+				<a href=""><h2>IR情報トップ</h2></a>
+				<p>株主/株式基本情報・IRニュース・経営方針など株主・投資家の皆様に向けた情報をご紹介します</p>
+			</div>
+			<div>
+				<a href=""><img src="image/img_ir-top_02.jpg" alt="個人投資家の皆様へ"></a>
+				<a href=""><h2>個人投資家の皆様へ</h2></a>
+				<p>当社の業績推移や強み、株主優待情報などを分り易くご紹介します</p>
+			</div>
+		</section>
+
+		<section class="recruit-wrap">
+			<div class="recruit">
+				<h2>RECRUIT</h2>
+				<h3>採用情報</h3>
+				<p class="intro">2100年を想像し、2020年を創造する<br>100年後の変化に対応する柔軟でしなやかな組織を創っていく</p>
+				<p>これからの100年、世界は今まで以上に大きな変化が起こっていくと考えます。<br>だからこそ、多様な事業、多様な思想で会社経営していくことが必要です。<br>その礎を一緒に築いていける人材を求めています。</p>
+				<div class="btn"><a href="">詳細を見る</a></div>
+				<div>
 		</section>
 	</main>
 
-	<footer>
-		<nav class="to-top"></nav>
+	<footer class="btm">
+		<nav class="to-top"><a href="#top">ページ上部に戻る</a></nav>
 
 		<aside class="links">
 			<ul>
 				<li>
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="txt"></p>
+					<a href=""><img src="image/bnr_ceo_blog.jpg" alt="社長ブログ"></a>
+					<a href="">
+						<p class="name">社長ブログ</p>
+					</a>
+					<p class="txt">弊社代表取締役社長兼CEO 宇佐美 進典のブログです。</p>
 				</li>
 				<li>
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="txt"></p>
+					<a href=""><img src="image/bnr_techlog.jpg" alt="エンジニアブログ"></a>
+					<a href="">
+						<p class="name">エンジニアブログ</p>
+					</a>
+					<p class="txt">弊社エンジニアによる技術関連ブログです。</p>
 				</li>
 				<li>
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="txt"></p>
+					<a href=""><img src="image/bnr_facebook.jpg" alt="Facebookページ"></a>
+					<a href="">
+						<p class="name">Facebookページ</p>
+					</a>
+					<p class="txt">VOYAGE GROUPでの日々の様子、クルーのライフスタイルを配信中。</p>
 				</li>
 				<li>
-					<img src="" alt="">
-					<p class="name"></p>
-					<p class="txt"></p>
+					<a href=""><img src="image/bnr_instagram.jpg" alt="インスタグラム"></a>
+					<a href="">
+						<p class="name">インスタグラム</p>
+					</a>
+					<p class="txt"><a href="//voyagegroup.com/company/social-media/">弊社公式アカウント一覧</a></p>
 				</li>
 			</ul>
 		</aside>
 
-		<nav class="fooer-nav">
+		<nav class="footer-nav">
 			<ul>
-				<li></li>
-				<li></li>
-				<li></li>
+				<li><a href="//voyagegroup.com/sitemap/">サイトマップ</a></li>
+				<li><a href="//voyagegroup.com/privacy-policy/">プライバシーポリシー</a></li>
+				<li><a href="//voyagegroup.com/contact/">お問い合わせ</a></li>
 			</ul>
+			<div class="copyright">© 2016 VOYAGE GROUP Inc.</div>
 		</nav>
 
-		<div class="copyright"></div>
 	</footer>
 </body>
 
