--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
 					<div class="discription">
 						<ul>
 							<li>
-								<div class="ttl-more">企業情報
-									<p>COMPANY</p>
-									<img src="image/bnr_company.jpg" alt="企業情報">
-									<div>会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
 								</div>
 								<ul>
 									<li><a href="">会社概要</a></li>
@@ -51,14 +54,17 @@
 				</li>
 				<li>
 					<div class="ttl">企業情報</div>
-					<!-- <div class="discription">
+					<div class="discription">
 						<ul>
 							<li>
-							<div class="ttl-more">企業情報
-								<p>COMPANY</p>
-								<img src="image/bnr_company.jpg" alt="企業情報">
-								<p>会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</p>
-							</div>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
 								<ul>
 									<li><a href="">会社概要</a></li>
 									<li><a href="">経営理念</a></li>
@@ -69,48 +75,147 @@
 									<li><a href="">代表の想い</a></li>
 								</ul>
 							</li>
-							<li></li>
 						</ul>
-					</div> -->
+					</div>
 				</li>
 
-			<li>
-				<div class="ttl">事業紹介</div>
-				<!-- <div class="discription">
-
-				</div> -->
-			</li>
-			<li>
-				<div class="ttl">テクノロジー</div>
-				<!-- <div class="discription">
-
-				</div> -->
-			</li>
-			<li>
-				<div class="ttl">カルチャー</div>
-				<!-- <div class="discription">
-
-				</div> -->
-			</li>
-			<li>
-				<div class="ttl">株主・投資家の皆様へ</div>
-				<!-- <div class="discription">
-
-				</div> -->
-			</li>
-			<li>
-				<div class="ttl">採用情報</div>
-				<!-- <div class="discription">
-
-				</div> -->
-			</li>
+				<li>
+					<div class="ttl">事業紹介</div>
+					<div class="discription">
+						<ul>
+							<li>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li>
+					<div class="ttl">テクノロジー</div>
+					<div class="discription">
+						<ul>
+							<li>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li>
+					<div class="ttl">カルチャー</div>
+					<div class="discription">
+						<ul>
+							<li>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li>
+					<div class="ttl">株主・投資家の皆様へ</div>
+					<div class="discription">
+						<ul>
+							<li>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</li>
+				<li>
+					<div class="ttl">採用情報</div>
+					<div class="discription">
+						<ul>
+							<li>
+								<div class="ttl-more">
+									<a href="">
+										<p>企業情報</p>
+										<p>COMPANY</p>
+									</a>
+									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+								</div>
+								<ul>
+									<li><a href="">会社概要</a></li>
+									<li><a href="">経営理念</a></li>
+									<li><a href="">経営陣紹介</a></li>
+									<li><a href="">沿革情報</a></li>
+									<li><a href="">CSR情報</a></li>
+									<li><a href="">公式アカウント一覧</a></li>
+									<li><a href="">代表の想い</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</li>
 			</ul>
 		</nav>
 		<div class="slider">
-			<ul>
-				<li><img src="image/img_slider_01.jpg" alt="" class="open"></li>
-				<li><img src="image/img_slider_02.jpg" alt="" class=""></li>
-				<li><img src="image/img_slider_03.jpg" alt="" class=""></li>
+			<ul class="slick-slider">
+				<li class="slick-item on"><img src="image/img_slider_01.jpg" alt=""></li>
+				<li class="slick-item"><img src="image/img_slider_02.jpg" alt=""></li>
+				<li class="slick-item"><img src="image/img_slider_03.jpg" alt=""></li>
 			</ul>
 		</div>
 	</header>
@@ -126,36 +231,36 @@
 					<li><a href="#news5">勉強会/登壇情報</a></li>
 				</ul>
 			</div>
-			<div class="news-list">
-				<ul id="news1" class="all">
+			<div>
+				<ul id="news1" class="news-list">
 					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-release">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
 					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-release">プレスリリース</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-ir">IRニュース</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-ir">IRニュース</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
 					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-release">プレスリリース</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 				</ul>
-				<ul id="news2" class="ir">
+				<ul id="news2" class="news-list">
 					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-info">お知らせ</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
 					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-info">お知らせ</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info">お知らせ</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-info2">お知らせ</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
 					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-info">お知らせ</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 				</ul>
-				<ul id="news3" class="release">
+				<ul id="news3" class="news-list">
 					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-release">プレスリリース</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
 					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-release">プレスリリース</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-release">プレスリリース</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-release">プレスリリース</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
 					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-release">プレスリリース</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 				</ul>
-				<ul id="news4" class="publicity">
+				<ul id="news4" class="news-list">
 					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-publicity">パブリシティ</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
 					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-publicity">パブリシティ</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-publicity">パブリシティ</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-publicity">パブリシティ</span><span class="title">平成29年9月期第3四半期 決算説明会動画（ダイジェスト版）</span></a></li>
 					<li><a href=""><span class="date">2017年07月31日</span><span class="news-type-publicity">パブリシティ</span><span class="title">VSG、フル３Ｄガンシューティングゲーム「GUN FIRE」正式配信開始！</span></a></li>
 				</ul>
-				<ul id="news5" class="seminer">
+				<ul id="news5" class="news-list">
 					<li><a href=""><span class="date">2017年08月04日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">「朝時間.jp」主催「グッドモーニングアワード2017」、総合大賞は森永製菓「甘酒」</span></a></li>
 					<li><a href=""><span class="date">2017年08月02日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">VOYAGE VENTURES、「AOSSMS」や「InCircle」など、B2Bモバイルコミュニケーションサービスを展開するAOSモバイル社に出資</span></a></li>
 					<li><a href=""><span class="date">2017年08月01日</span><span class="news-type-seminer">勉強会・登壇情報</span><span class="title">シェアードリサーチ社による当社の調査レポートが更新されました（6,146KB）</span></a></li>
@@ -219,31 +324,31 @@
 			<ul>
 				<li>
 					<a href=""><img src="image/bnr_ceo_blog.jpg" alt="社長ブログ"></a>
-					<a href="">
+					<div><a href="">
 						<p class="name">社長ブログ</p>
 					</a>
-					<p class="txt">弊社代表取締役社長兼CEO 宇佐美 進典のブログです。</p>
+					<p class="txt">弊社代表取締役社長兼CEO 宇佐美 進典のブログです。</p></div>
 				</li>
 				<li>
 					<a href=""><img src="image/bnr_techlog.jpg" alt="エンジニアブログ"></a>
-					<a href="">
+					<div><a href="">
 						<p class="name">エンジニアブログ</p>
 					</a>
-					<p class="txt">弊社エンジニアによる技術関連ブログです。</p>
+					<p class="txt">弊社エンジニアによる技術関連ブログです。</p></div>
 				</li>
 				<li>
 					<a href=""><img src="image/bnr_facebook.jpg" alt="Facebookページ"></a>
-					<a href="">
+					<div><a href="">
 						<p class="name">Facebookページ</p>
 					</a>
-					<p class="txt">VOYAGE GROUPでの日々の様子、クルーのライフスタイルを配信中。</p>
+					<p class="txt">VOYAGE GROUPでの日々の様子、クルーのライフスタイルを配信中。</p></div>
 				</li>
 				<li>
 					<a href=""><img src="image/bnr_instagram.jpg" alt="インスタグラム"></a>
-					<a href="">
+					<div><a href="">
 						<p class="name">インスタグラム</p>
 					</a>
-					<p class="txt"><a href="//voyagegroup.com/company/social-media/">弊社公式アカウント一覧</a></p>
+					<p class="txt"><a href="//voyagegroup.com/company/social-media/">弊社公式アカウント一覧</a></p></div>
 				</li>
 			</ul>
 		</aside>
@@ -258,6 +363,13 @@
 		</nav>
 
 	</footer>
+
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+	<link rel="stylesheet" href="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css">
+	<script src="//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+	<script>
+	</script>
+
 </body>
 
 </html>
