--- a/index.html
+++ b/index.html
@@ -20,16 +20,13 @@
 			<li>日本語</li>
 			<li><a href="#">English</a></li>
 		</ul>
-		<h1 class="header-img">
-			<img class="lg-img" src="image/img_logo_pc.png" alt="VOYAGE GROUP" width="172" height="38">
-			<img class="sm-img" src="image/img_logo.png" alt="VOYAGE GROUP" width="111" height="25">
-		</h1>
+		<a href="#"><h1 class="header-img">VOYAGE GROUP</h1></a>
+
 		<nav class="global-nav">
 			<ul>
 				<li>
 					<div class="ttl">企業情報</div>
-					<div class="discription">
-						<ul>
+						<ul class="discription">
 							<li>
 								<div class="ttl-more">
 									<a href="">
@@ -50,164 +47,151 @@
 								</ul>
 							</li>
 						</ul>
-					</div>
 				</li>
 				<li>
-					<div class="ttl">企業情報</div>
-					<div class="discription">
-						<ul>
-							<li>
-								<div class="ttl-more">
-									<a href="">
-										<p>企業情報</p>
-										<p>COMPANY</p>
-									</a>
-									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
-									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
-								</div>
-								<ul>
-									<li><a href="">会社概要</a></li>
-									<li><a href="">経営理念</a></li>
-									<li><a href="">経営陣紹介</a></li>
-									<li><a href="">沿革情報</a></li>
-									<li><a href="">CSR情報</a></li>
-									<li><a href="">公式アカウント一覧</a></li>
-									<li><a href="">代表の想い</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+					<div class="ttl">ニュース</div>
+					<ul class="discription">
+						<li>
+							<div class="ttl-more">
+								<a href="">
+									<p>企業情報</p>
+									<p>COMPANY</p>
+								</a>
+								<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+								<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+							</div>
+							<ul>
+								<li><a href="">会社概要</a></li>
+								<li><a href="">経営理念</a></li>
+								<li><a href="">経営陣紹介</a></li>
+								<li><a href="">沿革情報</a></li>
+								<li><a href="">CSR情報</a></li>
+								<li><a href="">公式アカウント一覧</a></li>
+								<li><a href="">代表の想い</a></li>
+							</ul>
+						</li>
+					</ul>
 				</li>
 
 				<li>
 					<div class="ttl">事業紹介</div>
-					<div class="discription">
-						<ul>
-							<li>
-								<div class="ttl-more">
-									<a href="">
-										<p>企業情報</p>
-										<p>COMPANY</p>
-									</a>
-									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
-									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
-								</div>
-								<ul>
-									<li><a href="">会社概要</a></li>
-									<li><a href="">経営理念</a></li>
-									<li><a href="">経営陣紹介</a></li>
-									<li><a href="">沿革情報</a></li>
-									<li><a href="">CSR情報</a></li>
-									<li><a href="">公式アカウント一覧</a></li>
-									<li><a href="">代表の想い</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+					<ul class="discription">
+						<li>
+							<div class="ttl-more">
+								<a href="">
+									<p>企業情報</p>
+									<p>COMPANY</p>
+								</a>
+								<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+								<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+							</div>
+							<ul>
+								<li><a href="">会社概要</a></li>
+								<li><a href="">経営理念</a></li>
+								<li><a href="">経営陣紹介</a></li>
+								<li><a href="">沿革情報</a></li>
+								<li><a href="">CSR情報</a></li>
+								<li><a href="">公式アカウント一覧</a></li>
+								<li><a href="">代表の想い</a></li>
+							</ul>
+						</li>
+					</ul>
 				</li>
 				<li>
 					<div class="ttl">テクノロジー</div>
-					<div class="discription">
-						<ul>
-							<li>
-								<div class="ttl-more">
-									<a href="">
-										<p>企業情報</p>
-										<p>COMPANY</p>
-									</a>
-									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
-									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
-								</div>
-								<ul>
-									<li><a href="">会社概要</a></li>
-									<li><a href="">経営理念</a></li>
-									<li><a href="">経営陣紹介</a></li>
-									<li><a href="">沿革情報</a></li>
-									<li><a href="">CSR情報</a></li>
-									<li><a href="">公式アカウント一覧</a></li>
-									<li><a href="">代表の想い</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+					<ul class="discription">
+						<li>
+							<div class="ttl-more">
+								<a href="">
+									<p>企業情報</p>
+									<p>COMPANY</p>
+								</a>
+								<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+								<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+							</div>
+							<ul>
+								<li><a href="">会社概要</a></li>
+								<li><a href="">経営理念</a></li>
+								<li><a href="">経営陣紹介</a></li>
+								<li><a href="">沿革情報</a></li>
+								<li><a href="">CSR情報</a></li>
+								<li><a href="">公式アカウント一覧</a></li>
+								<li><a href="">代表の想い</a></li>
+							</ul>
+						</li>
+					</ul>
 				</li>
 				<li>
 					<div class="ttl">カルチャー</div>
-					<div class="discription">
-						<ul>
-							<li>
-								<div class="ttl-more">
-									<a href="">
-										<p>企業情報</p>
-										<p>COMPANY</p>
-									</a>
-									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
-									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
-								</div>
-								<ul>
-									<li><a href="">会社概要</a></li>
-									<li><a href="">経営理念</a></li>
-									<li><a href="">経営陣紹介</a></li>
-									<li><a href="">沿革情報</a></li>
-									<li><a href="">CSR情報</a></li>
-									<li><a href="">公式アカウント一覧</a></li>
-									<li><a href="">代表の想い</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+					<ul class="discription">
+						<li>
+							<div class="ttl-more">
+								<a href="">
+									<p>企業情報</p>
+									<p>COMPANY</p>
+								</a>
+								<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+								<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+							</div>
+							<ul>
+								<li><a href="">会社概要</a></li>
+								<li><a href="">経営理念</a></li>
+								<li><a href="">経営陣紹介</a></li>
+								<li><a href="">沿革情報</a></li>
+								<li><a href="">CSR情報</a></li>
+								<li><a href="">公式アカウント一覧</a></li>
+								<li><a href="">代表の想い</a></li>
+							</ul>
+						</li>
+					</ul>
 				</li>
 				<li>
 					<div class="ttl">株主・投資家の皆様へ</div>
-					<div class="discription">
-						<ul>
-							<li>
-								<div class="ttl-more">
-									<a href="">
-										<p>企業情報</p>
-										<p>COMPANY</p>
-									</a>
-									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
-									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
-								</div>
-								<ul>
-									<li><a href="">会社概要</a></li>
-									<li><a href="">経営理念</a></li>
-									<li><a href="">経営陣紹介</a></li>
-									<li><a href="">沿革情報</a></li>
-									<li><a href="">CSR情報</a></li>
-									<li><a href="">公式アカウント一覧</a></li>
-									<li><a href="">代表の想い</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+					<ul class="discription">
+						<li>
+							<div class="ttl-more">
+								<a href="">
+									<p>企業情報</p>
+									<p>COMPANY</p>
+								</a>
+								<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+								<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+							</div>
+							<ul>
+								<li><a href="">会社概要</a></li>
+								<li><a href="">経営理念</a></li>
+								<li><a href="">経営陣紹介</a></li>
+								<li><a href="">沿革情報</a></li>
+								<li><a href="">CSR情報</a></li>
+								<li><a href="">公式アカウント一覧</a></li>
+								<li><a href="">代表の想い</a></li>
+							</ul>
+						</li>
+					</ul>
 				</li>
 				<li>
 					<div class="ttl">採用情報</div>
-					<div class="discription">
-						<ul>
-							<li>
-								<div class="ttl-more">
-									<a href="">
-										<p>企業情報</p>
-										<p>COMPANY</p>
-									</a>
-									<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
-									<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
-								</div>
-								<ul>
-									<li><a href="">会社概要</a></li>
-									<li><a href="">経営理念</a></li>
-									<li><a href="">経営陣紹介</a></li>
-									<li><a href="">沿革情報</a></li>
-									<li><a href="">CSR情報</a></li>
-									<li><a href="">公式アカウント一覧</a></li>
-									<li><a href="">代表の想い</a></li>
-								</ul>
-							</li>
-						</ul>
-					</div>
+					<ul class="discription">
+						<li>
+							<div class="ttl-more">
+								<a href="">
+									<p>企業情報</p>
+									<p>COMPANY</p>
+								</a>
+								<a href=""><img src="image/bnr_company.jpg" alt="企業情報"></a>
+								<div class="int">会社概要・代表の想い・経営陣紹介・沿革・CSRなどをご覧いただけます</div>
+							</div>
+							<ul>
+								<li><a href="">会社概要</a></li>
+								<li><a href="">経営理念</a></li>
+								<li><a href="">経営陣紹介</a></li>
+								<li><a href="">沿革情報</a></li>
+								<li><a href="">CSR情報</a></li>
+								<li><a href="">公式アカウント一覧</a></li>
+								<li><a href="">代表の想い</a></li>
+							</ul>
+						</li>
+					</ul>
 				</li>
 			</ul>
 		</nav>
